[package]
name = "bref"
version = "0.1.0"
description = "A modest URL shortener for personal usage."
authors = [ "Nicolas Gryman <ngryman@gmail.com>" ]
license = "MIT"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.6.20", features = [ "macros" ] }
clap = { version = "4.4.6", features = [ "derive", "env" ] }
num = "0.4.1"
serde = { version = "1.0.188", features = [ "derive" ] }
sled = "0.34.7"
tokio = { version = "1.32.0", features = [ "rt-multi-thread", "macros" ] }
tower-http = { version = "0.4.4", features = [ "trace" ] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = [ "env-filter" ] }
xdg = "2.5.2"
